# LibForMachineLearning

./: ESGI_ProjetAnnuel3BigData_E4_07-27-00.12.25_SlidedeprésentationPowerPoint.pptx  README.md
V2/: CMakeLists.txt  CalculMatriciel.cpp  CalculMatriciel.h  PMC.cpp  PMC.h  library.cpp
python/: PythonTestLib.ipynb
